--- a/assets/css/_style.scss
+++ b/assets/css/_style.scss
@@ -8,14 +8,19 @@ body {
   font-family: Lato,sans-serif;
   font-size: 18px;
   font-weight: 300;
-  margin-top: 60px;
   line-height: 140%;
+  height: 100%;
+  min-width: 320px;
 }
 
 strong { font-weight: 400; }
 em { font-style: italic; }
-p { margin: 0; padding: 0 0 20px; }
-h1,h2,h3,h4,h5 { font-weight: 700; margin: 10px 0; }
+p { margin: 0; padding: 0 0 10px; }
+h1,h2,h3,h4,h5 {
+  font-weight: 700;
+  line-height: 120%;
+  font-family: frank_the_architect, serif;
+}
 h1 { font-size: 36px; }
 h2 { font-size: 24px; }
 h3 { font-size: 18px; }
@@ -34,69 +39,21 @@ a[rel=external] {
 .left { float: left; }
 .right { float: right; }
 
-hr {
-  clear: both;
-  position: relative;
-  border: 0;
-  height: 8px;
-  width: 8px;
-  display: block;
-  outline: 0;
-  background-color: #a3cd00;
-  @include border-radius(1px);
-  margin: 5px auto 25px;
-  &:before {
-    left: -16px;
-    background-color: #7a9a00;
-  }
-  &:after {
-    left: 16px;
-    margin-top: -8px;
-    background-color: #cbff01;
-  }
-  &:before,&:after {
-    position: relative;
-    content: '\a0';
-    float: left;
-    line-height: 8px;
-    height: 8px;
-    width: 8px;
-    @include border-radius(1px);
-  }
-}
-
 /* Layout */
 header {
-  z-index: 1000;
+  position: absolute;
   top: 0;
-  position: fixed;
-  width: 100%;
-  background-color: #000;
-  background-color: rgba(0,0,0,.95);
-  height: 40px;
-  line-height: 40px;
-  @include clearfix;
-  ul {
-    li {
-      float: left;
-      margin-left: 10px;
-      &:first-child {
-        margin-left: 0px;
-      }
-    }
-  }
-  a {
-    color: #fff;
-    &:hover {
-      text-decoration: none;
-    }
-  }
-  .small { font-size: 16px; }
+  bottom: 0;
+  right: 0;
+  width: 35%;
+  padding: 2%;
+  background-color: rgba(0,0,0,.85);
 }
+
 
 .shad {
   border-bottom: 1px solid #000;
   @include box-shadow(0 0 5px rgba(0,0,0,.5));
 }
 
-.backstretch { top: 40px !important; }
+.anystretch { top: 50px; }
