--- a/pages/index.jade
+++ b/pages/index.jade
@@ -1,32 +1,29 @@
 extends layout/main
 append content
-  header
-    h1 Peter Henrikson
-    p Timber Frame Education, Design &amp; Joinery
-    p
-     |218-370-8415
-     br
-     script
-       { coded = "TDi45wJh@fDB4wh.DBy"
-         key = "mpAV3h6vOxtbTMqBkRLWsXzS1aiFn5f0ojYPu7KIg9e8wJQGlNcDHUEd2CryZ4"
-         shift=coded.length
-         link=""
-         for (i=0; i<coded.length; i++) {
-           if (key.indexOf(coded.charAt(i))==-1) {
-             ltr = coded.charAt(i)
-             link += (ltr)
-           }
-           else {
-             ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-             link += (key.charAt(ltr))
-           }
-         }
-         document.write("<a href='mailto:"+link+"'>"+link+"</a>")
-       }
+
+  a#prevslide.load-item
+  a#nextslide.load-item
 
 append js
   script
-    $.anystretch("/assets/img/peter.jpg", {
-      centeredX: true,
-      speed: 150
+    $(function() {
+      $.supersized({
+        slide_interval: 3000,
+        transition: 1,
+        transition_speed: 700,
+        slide_links: false,
+        slides: [
+          { image: '/assets/img/gallery/0.jpg', },
+          { image: '/assets/img/gallery/1.jpg', },
+          { image: '/assets/img/gallery/2.jpg', },
+          { image: '/assets/img/gallery/3.jpg', },
+          { image: '/assets/img/gallery/4.jpg', },
+          { image: '/assets/img/gallery/5.jpg', },
+          { image: '/assets/img/gallery/6.jpg', },
+          { image: '/assets/img/gallery/7.jpg', },
+          { image: '/assets/img/gallery/8.jpg', },
+          { image: '/assets/img/gallery/9.jpg', },
+          { image: '/assets/img/gallery/10.jpg', }
+        ]
+      });
     });
