--- a/pages/layout/main.jade
+++ b/pages/layout/main.jade
@@ -5,7 +5,7 @@ html(lang='en')
     meta(charset='utf-8')
     meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
     meta(name='description', content="Master Timber Framer Peter Henrikson")
-    meta(name='author', content='Tyler Kellen @tkellen')
+    meta(name='author', content='Peter Henrikson')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     link(href='/assets/site.css', rel='stylesheet', type='text/css', media='all')
     link(href='http://fonts.googleapis.com/css?family=Lato:300,400,700', rel='stylesheet')
