--- a/pages/index.jade
+++ b/pages/index.jade
@@ -24,6 +24,7 @@ append js
           { image: '/assets/img/gallery/8.jpg', },
           { image: '/assets/img/gallery/9.jpg', },
           { image: '/assets/img/gallery/10.jpg', }
+          { image: '/assets/img/gallery/11.jpg', }
         ]
       });
     });
