style for iphone wide

--- a/assets/css/supersized.styl
+++ b/assets/css/supersized.styl
@@ -7,7 +7,7 @@
   height: 60px
   margin: -30px 0 0 -30px
   text-indent: -999em
-  background: url(/img/assets/progress.gif) no-repeat center center
+  background: url('/assets/img/progress.gif') no-repeat center center
 
 #supersized
   display: block
