--- a/assets/css/base.styl
+++ b/assets/css/base.styl
@@ -8,7 +8,7 @@ body
   font-weight 300
   line-height 140%
   height 100%
-  min-width 320px
+  min-width 480px
 
 strong
   font-weight 400
@@ -55,6 +55,7 @@ header
   position: fixed
   box-sizing: border-box
   width: 100%
+  min-width: 480px
   background-color: #000
   background-color: rgba(0,0,0,.95)
   line-height: 40px
