--- a/pages/include/analytics.jade
+++ b/pages/include/analytics.jade
@@ -1,5 +1,7 @@
 script
   var _gaq = _gaq || [];
+  var pluginUrl = '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+  _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
   _gaq.push(['_setAccount', 'UA-39117798-1']);
   _gaq.push(['_trackPageview']);
   (function() {
