--- a/site/pages/layout/main.jade
+++ b/site/pages/layout/main.jade
@@ -13,6 +13,6 @@ html(lang='en')
     //if lt IE 9
       script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
   body
-    include ../include/header
+    include ../partials/header
     block content
-    include ../include/footer
+    include ../partials/footer
