--- a/site/styles/nav.styl
+++ b/site/styles/nav.styl
@@ -5,7 +5,7 @@ nav
   width: 100%
   color: #fff
   background-color: #111
-  transition: all .25s
+  transition: top .25s
   clearfix()
   &.stuck
     top: 0px
@@ -13,11 +13,15 @@ nav
   .brand
     float: left
     height: 45px
-    background: transparent url('assets/img/logosmall.png') 15px 12px no-repeat
-    padding: 17px 20px 0 60px
+    padding: 17px 20px 0 0px
     margin-bottom: 0
     line-height: 100%
     font-size: 28px
+  .logosmall
+    float: left
+    height: 35px
+    width: 35px
+    margin: 12px 10px 0 10px
 
   ul
     display: block
@@ -39,11 +43,11 @@ nav
 // mobile only
 @media only screen and (max-width: 767px)
   nav
-    position: relative
+    position: fixed
     top: 0
     display: block
-    height: 40px
-    .brand
+    height: 45px
+    .logosmall, .brand
       display: none
     ul
       height: auto
