--- a/site/pages/partials/entry.jade
+++ b/site/pages/partials/entry.jade
@@ -1,5 +1,5 @@
-li
-  time(date=entry.year)=entry.year
+li(class=entry.categories)
+  time(date=entry.date.toJSON())=moment(entry.date).format('MMMM, YYYY')
   i(class="icon fa #{entry.icon}")
   .entry
     p!=entry.content
