--- a/site/pages/index.jade
+++ b/site/pages/index.jade
@@ -55,7 +55,25 @@ block content
 
   section#work.fullheight
     h1 My Work
+    div(style="text-align:center")
+      a(href="javascript:;",onclick="$('.timeline li').not('.grindbygg').fadeOut()") show grindbygg
+      |&nbsp;|&nbsp;
+      a(href="javascript:;",onclick="$('.timeline li').fadeIn()") show all
     .container
       ul.timeline
-        - each entry in config.timeline
+        - each entry in config.timeline.reverse()
           include partials/entry
+
+  section#contact.fullheight
+    #form-main
+      #form-div
+          form#form1.form
+            p.name
+              input.feedback-input#name(name='name', type='text', placeholder='Name')
+            p.email
+              input.feedback-input#email(name='email', type='text', placeholder='Email')
+            p.text
+              textarea.feedback_input#comment(name='text', placeholder='Comment')
+            .submit
+              input#button-blue(type='submit', value='SEND')
+              .ease
