--- a/site/styles/style.styl
+++ b/site/styles/style.styl
@@ -1,4 +1,8 @@
 themeColor = #233223
+timeLine = #B4AF91
+timeBg = #40411E
+timeBgOdd = #32331D
+dateColor = timeLine
 
 @import 'nib'
 global-reset()
@@ -19,6 +23,7 @@ html, body
   font-weight: 300
   min-width: 240px
   line-height: 150%
+  background-color: #000
 
 a
   text-decoration: none
