--- a/site/styles/contact.styl
+++ b/site/styles/contact.styl
@@ -1,131 +1,46 @@
-#form-main
-  width:100%
-  float:left
-  padding-top:0px
+#contact
+  background-color: darken(timeBgOdd,70%)
 
-#form-div
-  background-color:rgba(72,72,72,0.4)
-  padding-left:35px
-  padding-right:35px
-  padding-top:35px
-  padding-bottom:50px
-  width: 450px
-  float: left
-  left: 50%
-  position: absolute
-  margin-top:30px
-  margin-left: -260px
-  border-radius: 7px
+  form
+    width: 100%
 
-.feedback-input
-  color:#3c3c3c
-  font-family: Helvetica, Arial, sans-serif
-  font-weight:500
-  font-size: 18px
-  border-radius: 0
-  line-height: 22px
-  background-color: #fbfbfb
-  padding: 13px 13px 13px 54px
-  margin-bottom: 10px
-  width:100%
-  box-sizing: border-box
-  border: 3px solid rgba(0,0,0,0)
+  input, textarea
+    color: #333
+    font-family: Lato, sans-serif
+    font-weight: bold
+    position: relative
+    font-size: 18px
+    line-height: 22px
+    background-color: #f2f2f2
+    padding: 10px
+    margin-bottom: 20px
+    width: 100%
+    box-sizing: border-box
+    border: 3px solid rgba(0,0,0,0)
+    border-radius: 3px
+    &.iconed
+      font-family: FontAwesome
 
-.feedback-input:focus
-  background: #fff
-  box-shadow: 0
-  border: 3px solid #3498db
-  color: #3498db
-  outline: none
-  padding: 13px 13px 13px 54px
+    &:focus
+      background: #fff
+      box-shadow: 0
+      border: 3px solid darken(timeLine,40%)
+      outline: none
 
+    &:hover
+      background-color: white
 
-.focused
-  color:#30aed6
-  border:#30aed6 solid 3px
+  textarea
+    height: 150px
+    line-height: 125%
 
-
-/* Icons ---------------------------------- */
-#name
-  background-image: url(http://rexkirby.com/kirbyandson/images/name.svg)
-  background-size: 30px 30px
-  background-position: 11px 8px
-  background-repeat: no-repeat
-
-#name:focus
-  background-image: url(http://rexkirby.com/kirbyandson/images/name.svg)
-  background-size: 30px 30px
-  background-position: 8px 5px
-  background-position: 11px 8px
-  background-repeat: no-repeat
-
-#email
-  background-image: url(http://rexkirby.com/kirbyandson/images/email.svg)
-  background-size: 30px 30px
-  background-position: 11px 8px
-  background-repeat: no-repeat
-
-
-#email:focus
-  background-image: url(http://rexkirby.com/kirbyandson/images/email.svg)
-  background-size: 30px 30px
-  background-position: 11px 8px
-  background-repeat: no-repeat
-
-#comment
-  background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg)
-  background-size: 30px 30px
-  background-position: 11px 8px
-  background-repeat: no-repeat
-
-textarea
-  width: 100%
-  height: 150px
-  line-height: 150%
-
-input:hover, textarea:hover,
-input:focus, textarea:focus
-  background-color:white
-
-#button-blue
-  float:left
-  width: 100%
-  border: #fbfbfb solid 4px
-  cursor:pointer
-  background-color: #3498db
-  color:white
-  font-size:24px
-  padding-top:22px
-  padding-bottom:22px
-  -moz-transition: all 0.3s
-  transition: all 0.3s
-  margin-top:-4px
-  font-weight:700
-
-#button-blue:hover
-  background-color: rgba(0,0,0,0)
-  color: #0493bd
-
-.submit:hover
-  color: #3498db
-
-.ease
-  width: 0px
-  height: 74px
-  background-color: #fbfbfb
-  transition: .3s ease
-
-
-.submit:hover .ease
-  width:100%
-  background-color:white
-
-@media only screen and (max-width: 580px)
-  #form-div
-    left: 3%
-    margin-right: 3%
-    width: 88%
-    margin-left: 0
-    padding-left: 3%
-    padding-right: 3%
-
+  input[type=submit]
+    width: 100%
+    cursor: pointer
+    background-color: darken(timeLine,70%)
+    color: white
+    font-size: 24px
+    padding: 20px 0
+    transition: background-color .25s
+    &:hover
+      background-color: darken(timeLine,50%)
