--- a/site/styles/splash.styl
+++ b/site/styles/splash.styl
@@ -12,12 +12,15 @@
     background: url("/assets/img/splash.jpg") fixed no-repeat
     background-size: cover
 
-  .down-arrow i
-    display: block
-    font-size: 40px
-    font-weight: normal
-    margin-top: 20px
-    color: rgba(255,255,255,.9)
+  .down-arrow
+    text-decoration: none
+    i
+      display: block
+      font-size: 40px
+      font-weight: normal
+      margin-top: 20px
+      color: rgba(255,255,255,.9)
+
 
   .logo
     width: 200px
@@ -30,9 +33,6 @@
 
   &:last-child
     background-color: #fff
-
-  .content.affix
-    width: 90%
 
   .btn
     position: relative
@@ -48,6 +48,7 @@
     background-color: transparent
     border-radius: 6px
     transition: .3s
+    text-decoration: none;
 
     &:hover
       border-color: #fff
