--- a/site/styles/style.styl
+++ b/site/styles/style.styl
@@ -26,9 +26,9 @@ html, body
   background-color: #000
 
 a
-  text-decoration: none
-  color: #ddd
+  color: #fff
   transition: all .1s
+  text-decoration: underline
   &:hover
     color: #fff
 
