--- a/site/styles/nav.styl
+++ b/site/styles/nav.styl
@@ -37,8 +37,7 @@ nav
         line-height: 25px
         padding: 0 5px
         border-radius: 5px
-        &:hover
-          color: #fff
+        text-decoration: none
 
 // mobile only
 @media only screen and (max-width: 767px)
