mobile image sizing

--- a/site/views/index.jade
+++ b/site/views/index.jade
@@ -2,8 +2,7 @@ extends layout/main
 
 block content
 
-  section#home.splash.fullheight
-    .background.parallax
+  section#home.fullheight.parallax
     .content
       .logo
         object(type="image/svg+xml", data="/assets/img/logo.svg")
@@ -28,8 +27,7 @@ block content
           h3
             a(href="mailto:peter@peterhenrikson.com") peter@peterhenrikson.com
 
-  section#services.fullheight
-    .background.parallax
+  section#services.fullheight.parallax
     .container
       h1.contrast Timber Framing Services
       .row
