--- a/site/styles/services.styl
+++ b/site/styles/services.styl
@@ -1,14 +1,11 @@
 #services
+  &.parallax
+    background: #000 url("/assets/img/services.jpg") fixed no-repeat
+    background-size: cover
   color: #ddd
-  background-color: #000
   font-size: 18px
   text-shadow: 0 0 4px rgba(0,0,0,.5),
                0 0 4px rgba(0,0,0,.5)
-
-  .background
-    background: url("/assets/img/services.jpg") fixed no-repeat
-    background-size: cover
-    opacity: .3
 
   .service
     text-align: center
