--- a/site/styles/splash.styl
+++ b/site/styles/splash.styl
@@ -1,4 +1,8 @@
 #home
+  &.parallax
+    background: url("/assets/img/splash.jpg") fixed no-repeat
+    background-size: cover
+
   h1
     text-shadow: 0 0 10px rgba(0,0,0,.3),
                  0 0 10px rgba(0,0,0,.3)
@@ -7,10 +11,6 @@
 
   .content
     text-align: center
-
-  .background
-    background: url("/assets/img/splash.jpg") fixed no-repeat
-    background-size: cover
 
   .down-arrow
     text-decoration: none
@@ -65,7 +65,6 @@
     &:focus
       color: #fff
       outline: none
-
 
 
 // small screens / tablets
