--- a/site/views/layout/main.jade
+++ b/site/views/layout/main.jade
@@ -2,7 +2,7 @@
 html(lang='en')
   head
     block config
-    title=title?title:config.title
+    title!=title?title:config.title
     meta(charset='utf-8')
     meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
