--- a/site/views/partials/footer.jade
+++ b/site/views/partials/footer.jade
@@ -1,4 +1,4 @@
-if debug === true
+if mode === 'development'
   script(src="http://localhost:35729/livereload.js")
   script(data-main="../config/requirejs", src="../components/requirejs/require.js")
 else
