--- a/lib/peterhenrikson/styles/services.styl
+++ b/lib/peterhenrikson/styles/services.styl
@@ -11,8 +11,9 @@
     text-align: center
     color: #ddd
     padding-bottom: 15px
-    h3
+    h2
       margin-bottom: 15px
+      font-size: 38px
     i
       text-shadow: none
       margin: 15px auto
