--- a/lib/peterhenrikson/styles/style.styl
+++ b/lib/peterhenrikson/styles/style.styl
@@ -14,6 +14,7 @@ global-reset()
 @import 'about'
 @import 'services'
 @import 'work'
+@import 'timeline'
 @import 'contact'
 @import 'humane'
 
@@ -61,7 +62,6 @@ hr
 
 p
   margin-bottom: 20px
-
 
 .italic
   font-style: italic
