--- a/lib/peterhenrikson/styles/work.styl
+++ b/lib/peterhenrikson/styles/work.styl
@@ -1,130 +1,27 @@
 #work
-  background-color: darken(timeBgOdd,40%)
 
-.timeline
-  margin: 30px 0 0 0
-  padding: 0
-  list-style: none
-  position: relative
-
-  /* The line */
-  &:before
-    content: ''
-    position: absolute
-    top: 0
-    bottom: 0
-    width: 10px
-    background: timeLine
-    left: 35%
-    margin-left: -10px
-
-  li
-    position: relative
-
-    time
+  .service
+    text-align: center
+    color: #ddd
+    padding-bottom: 15px
+    h2
+      margin-bottom: 15px
+      font-size: 38px
+    i
+      text-shadow: none
+      margin: 15px auto
       display: block
-      position: absolute
-      font-size: 30px
-      color: dateColor
-      font-weight: bold
-      font-family: Marcellus, georgia, serif
-
-
-    /* The icons */
-    .icon
-      width: 40px
-      height: 40px
-      speak: none
-      font-style: normal
-      font-weight: normal
-      font-variant: normal
-      text-transform: none
-      line-height: 40px
-      -webkit-font-smoothing: antialiased
-      position: absolute
-      color: #fff
-      background: timeBg
+      font-size: 20px
+      display: block
+      height: 50px
+      width: 50px
+      border: 4px solid lighten(themeColor, 10%)
       border-radius: 50%
-      box-shadow: 0 0 0 8px timeLine
+      transition: color .3s
+      cursor: pointer
       text-align: center
-      left: 35%
-      top: 0
-      margin: 0 0 0 -25px
-
-    /* Right content */
-    .entry
-      margin: 0 0 15px 40%
-      background: timeBg
-      color: #fff
-      padding: 20px
-      position: relative
-      border-radius: 5px
-
-      /* The triangle */
-      &:after
-        right: 100%
-        border: solid transparent
-        content: " "
-        height: 0
-        width: 0
-        position: absolute
-        pointer-events: none
-        border-right-color: timeBg
-        border-width: 10px
-        top: 10px
-
-    &:nth-child(odd)
-      .entry
-        background: timeBgOdd
-        &:after
-          border-right-color: timeBgOdd
-
-      h2
-        margin-top: 0px
-        padding: 0 0 10px 0
-        border-bottom: 1px solid rgba(255,255,255,0.4)
-
-
-// small screens / tablets
-@media only screen and (min-width: 768px) and (max-width: 959px)
-  .timeline
-    time
-      font-size: 24px !important
-
-// mobile portrait
-@media screen and (max-width: 767px)
-  .timeline
-    &:before
-      display: none
-
-    li
-      time
-        width: 100%
-        position: relative
-        padding: 0 0 20px 0
-        text-align: left
-
-      .icon
-        position: relative
-        float: right
-        left: auto
-        margin: -55px 5px 0 0px
-
-      .entry
-        margin: 0 0 30px 0
-        padding: 1em
-        font-weight: 400
-        font-size: 95%
-        &:after
-          right: auto
-          left: 20px
-          border-right-color: transparent
-          border-bottom-color: timeBg
-          top: -20px
-
-      &:nth-child(odd)
-        .entry
-          &:after
-            border-right-color: transparent
-            border-bottom-color: timeBgOdd
-
+      line-height: 50px
+      transition: background-color .25s
+    &:hover
+      i
+        background-color: themeColor
