--- a/lib/peterhenrikson/styles/services.styl
+++ b/lib/peterhenrikson/styles/services.styl
@@ -1,6 +1,6 @@
 #services
   &.parallax
-    background: #000 url("/assets/img/services.jpg") fixed no-repeat
+    background: #000 url("/img/services.jpg") fixed no-repeat
     background-size: cover
   color: #ddd
   font-size: 18px
