--- a/lib/peterhenrikson/styles/splash.styl
+++ b/lib/peterhenrikson/styles/splash.styl
@@ -1,6 +1,6 @@
 #home
   &.parallax
-    background: url("/assets/img/splash.jpg") fixed no-repeat
+    background: url("/img/splash.jpg") fixed no-repeat
     background-size: cover
 
   h1
