--- a/lib/peterhenrikson/styles/style.styl
+++ b/lib/peterhenrikson/styles/style.styl
@@ -6,8 +6,10 @@ dateColor = timeLine
 
 @import 'nib'
 global-reset()
-@import 'skeleton.css'
-@import 'font-awesome.css'
+@import 'Skeleton/stylesheets/skeleton.css'
+@import 'swiper/dist/idangerous.swiper.css'
+@import 'Font-Awesome/css/font-awesome.css'
+
 @import 'nav'
 @import 'sections'
 @import 'splash'
@@ -17,6 +19,8 @@ global-reset()
 @import 'timeline'
 @import 'contact'
 @import 'humane'
+
+@import 'plugins'
 
 html, body
   height: 100%
