--- a/lib/peterhenrikson/views/_header.slim
+++ b/lib/peterhenrikson/views/_header.slim
@@ -1,6 +1,6 @@
 nav
-  object.logosmall type='image/svg+xml' data='/assets/img/logo.svg'
-    img src='/assets/img/logosmall.png'
+  object.logosmall type='image/svg+xml' data='/img/logo.svg'
+    img src='/img/logosmall.png'
   h1.brand Peter Henrikson
   ul
     li
