--- a/lib/peterhenrikson/styles/work.styl
+++ b/lib/peterhenrikson/styles/work.styl
@@ -25,3 +25,8 @@
     &:hover
       i
         background-color: themeColor
+
+  .panel
+    background-size: cover
+    height: 100%
+    width: 100%
