--- a/lib/peterhenrikson/styles/style.styl
+++ b/lib/peterhenrikson/styles/style.styl
@@ -74,3 +74,8 @@ p
   display: inline
   &:after
     content: '‡'
+
+
+.shadow
+  text-shadow: 0 0 10px rgba(0,0,0,.3),
+               0 0 10px rgba(0,0,0,.3)
