--- a/lib/peterhenrikson/views/index.slim
+++ b/lib/peterhenrikson/views/index.slim
@@ -3,7 +3,7 @@ section#home.fullheight.parallax
     .logo
       object type='image/svg+xml' data='/img/logo.svg'
         img src='/img/logo.png'
-    h1 Peter Henrikson <div class='dagger'></div> Timber Framer
+    h1.shadow Peter Henrikson <div class='dagger'></div> Timber Framer
 
     a.scroll.btn href='#about' LEARN MORE
     a.scroll.down-arrow href='#about'
@@ -13,7 +13,7 @@ section#about.fullheight
   .container
     .peter
       h1 Timber Frame Education, Design &amp; Joinery
-      .circled.sm
+      .circled
         img src='/img/peter.jpg' alt='Peter Henrikson'
       p Helping people with their timber frame dreams since 1998.
       p
@@ -25,50 +25,62 @@ section#about.fullheight
 
 section#services.fullheight.parallax
   .container
-    h1.contrast Timber Framing Services
+    h1 Timber Framing Services
     .row
-      .twelve.columns.services.offset-by-two
-        p For me, timber framing is a fascinating blend of right and left brain, of structure and form.  Whether I'm sharing information in a class, designing a frame &amp; producing shop drawings for an owner-builder, or cutting joinery myself, I'm always focused on creating a structure of lasting beauty.
+      .services.fourteen.columns.offset-by-one
+        p style="padding: 0 20px" For me, timber framing is a fascinating blend of right and left brain, of structure and form.  Whether I am sharing information in a class, designing a frame and producing shop drawings for an owner-builder, or cutting joinery myself, I'm always focused on creating a structure of lasting beauty.
     .row
       .five.columns.service
         h2 EDUCATION
-        .circled.sm
-          img src='/img/education.jpg'
+        .circled.sm.cycle
+          img src='/img/services/education0.jpg'
+          img src='/img/services/education1.jpg'
+          img src='/img/services/education2.jpg'
+          img src='/img/services/education3.jpg'
         p Teaching classes in basic and Norwegian style Grindbygg framing at <a href='http://northhouse.org/'>North House Folk School</a> and elsewhere.
       .six.columns.service
         h2 DESIGN
-        .circled.sm
-          img src='/img/design.jpg'
+        .circled.sm.cycle
+          img src='/img/services/design0.jpg'
+          img src='/img/services/design1.jpg'
+          img src='/img/services/design2.jpg'
+          img src='/img/services/design3.jpg'
         p Specializing in design and frame plan sets for owner builders who want to cut the joinery for their own frames.
       .five.columns.service
         h2 JOINERY
-        .circled.sm
-          img src='/img/joinery.jpg' alt='Peter Henrikson'
+        .circled.sm.cycle
+          img src='/img/services/joinery0.jpg'
+          img src='/img/services/joinery1.jpg'
+          img src='/img/services/joinery2.jpg'
+          img src='/img/services/joinery3.jpg'
         p Constructing small and unique frames using traditional joinery with the subtle effects of hand tools.
 
 section#work.fullheight
   .container
-    h1.contrast My Work
-    .row.sixteen.columns
-      h2 TIMBER FRAMING
+    h1 Timber Framing
+    .sixteen.columns
       .swiper-container
         .swiper-wrapper
           == partial :project, :collection => timberframing
 
-    .row.sixteen.columns
-      h2 GRINDBYGG
+section.fullheight
+  .container
+    h1 Grindbygg
+    .sixteen.columns
       .swiper-container
         .swiper-wrapper
           == partial :project, :collection => grindbygg
-      p
-    .row.sixteen.columns
-      h2 DESIGN
+
+section.fullheight
+  .container
+    h1 Design
+    .sixteen.columns
       .swiper-container
         .swiper-wrapper
           == partial :project, :collection => design
 
-section#contact
-  h1 Contact Me
+section#contact.parallax
+  h1.shadow Contact Me
   .container
     form.ajax.sixteen.columns.alpha.omega action='/contact' method='post'
       input.iconed name='contact[name]' required='true' type='text' placeholder=='&#61447; Name'
