--- a/lib/peterhenrikson/styles/sections.styl
+++ b/lib/peterhenrikson/styles/sections.styl
@@ -28,7 +28,7 @@ section
   height: 250px
   border-radius: 50%
   overflow: hidden
-  border: 4px solid rgba(255,255,255,.4)
+  border: 4px solid rgba(255,255,255,.2)
   transition: border-color .5s
   &.sm
     width: 200px
@@ -36,6 +36,7 @@ section
 
   img
     width: 100%
+    display: block
 
 @media (max-width: 767px)
   section
