--- a/lib/peterhenrikson/styles/about.styl
+++ b/lib/peterhenrikson/styles/about.styl
@@ -1,16 +1,12 @@
 #about
-  h3
-    font-size: 20px
+  h1
+    font-size: 50px
+  text-align: center
+  color: #eee
+  .circled
+    margin-bottom: 35px
+  .tagline
+    font-size: 24px
   a
     text-decoration: none
 
-.peter
-  text-align: center
-  h2
-    color: #eee
-    margin: 0
-    line-height: 40px
-
-  p
-    color: #eee
-    line-height: 26px
