--- a/lib/peterhenrikson/styles/services.styl
+++ b/lib/peterhenrikson/styles/services.styl
@@ -8,27 +8,12 @@
                0 0 4px rgba(0,0,0,.5)
 
   .service
+    font-size: 18px
     text-align: center
     color: #ddd
     padding-bottom: 15px
     h2
-      margin-bottom: 15px
-      font-size: 38px
-    i
-      text-shadow: none
-      margin: 15px auto
-      display: block
+      margin-bottom: 5px
       font-size: 20px
-      display: block
-      height: 50px
-      width: 50px
-      border: 4px solid lighten(themeColor, 10%)
-      border-radius: 50%
-      transition: color .3s
-      cursor: pointer
-      text-align: center
-      line-height: 50px
-      transition: background-color .25s
-    &:hover
-      i
-        background-color: themeColor
+    p
+      padding: 0 20px
