--- a/lib/peterhenrikson/views/index.slim
+++ b/lib/peterhenrikson/views/index.slim
@@ -11,54 +11,49 @@ section#home.fullheight.parallax
 
 section#about.fullheight
   .container
-    .peter
-      h1 Timber Frame Education, Design &amp; Joinery
-      .circled.cycle
-        img src='/img/peter/0.jpg'
-        img src='/img/peter/1.jpg'
-        img src='/img/peter/2.jpg'
-        img src='/img/peter/3.jpg'
-        img src='/img/peter/4.jpg'
-      p Helping people with their timber frame dreams since 1998.
-      p
-        h2
-          a href='tel:218.370.8415' 218.370.8415
-      p
-        h3
-          a href='mailto:peter@peterhenrikson.com' peter@peterhenrikson.com
+    h1 Timber Frame Education, Design &amp; Joinery
+    .circled.cycle
+      img src='/img/peter/0.jpg'
+      img src='/img/peter/1.jpg'
+      img src='/img/peter/2.jpg'
+      img src='/img/peter/3.jpg'
+      img src='/img/peter/4.jpg'
+    p.tagline Helping people with their timber frame dreams since 1998.
+    h2
+      a href='tel:218.370.8415' 218.370.8415
 
 section#services.fullheight.parallax
   .container
     h1 Timber Framing Services
     .row
-      .services.fourteen.columns.offset-by-one
+      .services.fourteen.columns.offset-by-one.shadow
         p style="padding: 0 20px" For me, timber framing is a fascinating blend of right and left brain, of structure and form.  Whether I am sharing information in a class, designing a frame and producing shop drawings for an owner-builder, or cutting joinery myself, I'm always focused on creating a structure of lasting beauty.
     .row
       .five.columns.service
-        h2 EDUCATION
         .circled.sm.cycle
           img src='/img/services/education0.jpg'
           img src='/img/services/education1.jpg'
           img src='/img/services/education2.jpg'
           img src='/img/services/education3.jpg'
           img src='/img/services/education4.jpg'
+        h2 EDUCATION
         p Teaching classes in basic and Norwegian style Grindbygg framing at <a href='http://northhouse.org/'>North House Folk School</a> and elsewhere.
       .six.columns.service
-        h2 DESIGN
         .circled.sm.cycle
           img src='/img/services/design0.jpg'
           img src='/img/services/design1.jpg'
           img src='/img/services/design2.jpg'
           img src='/img/services/design3.jpg'
+        h2 DESIGN
         p Specializing in design and frame plan sets for owner builders who want to cut the joinery for their own frames.
       .five.columns.service
-        h2 JOINERY
         .circled.sm.cycle
           img src='/img/services/joinery0.jpg'
           img src='/img/services/joinery1.jpg'
           img src='/img/services/joinery2.jpg'
           img src='/img/services/joinery3.jpg'
           img src='/img/services/joinery4.jpg'
+        h2 JOINERY
         p Constructing small and unique frames using traditional joinery with the subtle effects of hand tools.
 
 section.fullheight
