--- a/lib/peterhenrikson/styles/sections.styl
+++ b/lib/peterhenrikson/styles/sections.styl
@@ -24,15 +24,15 @@ section
 .circled
   position: relative
   margin: 0 auto 15px auto
-  width: 300px
-  height: 300px
+  width: 275px
+  height: 275px
   border-radius: 50%
   overflow: hidden
   border: 4px solid rgba(255,255,255,.2)
   transition: border-color .5s
   &.sm
-    width: 250px
-    height: 250px
+    width: 225px
+    height: 225px
 
   img
     width: 100%
@@ -42,15 +42,18 @@ section
   section
     padding-top: 75px
     h1
-      font-size: 45px
+      font-size: 45px !important
     .content
       text-align: center
 
-@media (max-width: 420px)
 
+@media (max-width: 420px)
   section
     height: auto
     padding-top: 20px
     h1
-      font-size: 30px
+      font-size: 30px !important
       margin: 18px 0 35px 0
+  .circled
+    width: 200px !important
+    height: 200px !important
