--- a/lib/peterhenrikson/styles/style.styl
+++ b/lib/peterhenrikson/styles/style.styl
@@ -9,6 +9,7 @@ global-reset()
 @import 'Skeleton/stylesheets/skeleton.css'
 @import 'swiper/dist/idangerous.swiper.css'
 @import 'Font-Awesome/css/font-awesome.css'
+@import 'humane-js/themes/jackedup.css'
 
 @import 'nav'
 @import 'sections'
@@ -18,8 +19,7 @@ global-reset()
 @import 'work'
 @import 'timeline'
 @import 'contact'
-@import 'humane'
-
+@import 'project'
 
 html, body
   height: 100%
