--- a/lib/peterhenrikson/views/_header.slim
+++ b/lib/peterhenrikson/views/_header.slim
@@ -1,7 +1,9 @@
 nav
-  object.logosmall type='image/svg+xml' data='/img/logo.svg'
-    img src='/img/logosmall.png'
-  h1.brand Peter Henrikson
+  a href="/"
+    object.logosmall type='image/svg+xml' data='/img/logo.svg'
+      img src='/img/logosmall.png'
+  a href="/"
+    h1.brand Peter Henrikson
   ul
     li
       a.scroll href='/#about' <i class='fa fa-user'></i>&nbsp;&nbsp;about
