--- a/lib/peterhenrikson/views/_project.slim
+++ b/lib/peterhenrikson/views/_project.slim
@@ -1,5 +1,6 @@
 .swiper-slide
   .content-slide
-    h3== item.title
+    h3
+      a href=item.url #{item.title}
     - if item.featuredPhoto
       img.shadow src==item.featuredPhoto.src
