--- a/lib/peterhenrikson/views/project.slim
+++ b/lib/peterhenrikson/views/project.slim
@@ -1,2 +1,5 @@
-h1==project.name
-img src==project.featuredPhoto.src
+section#project
+  .container
+    h1==project.title
+    p==project.body
+    img src==project.featuredPhoto.src
