--- a/lib/peterhenrikson/views/_footer.slim
+++ b/lib/peterhenrikson/views/_footer.slim
@@ -1,8 +1,8 @@
 - if ENV['RACK_ENV'] == 'development'
   script src="http://localhost:35729/livereload.js"
-  script data-main="config/requirejs" src="components/requirejs/require.js"
+  script data-main="/config/requirejs" src="/components/requirejs/require.js"
 - else
-  script src="site.js"
+  script src="/site.js"
 
 == partial :analytics
 == yield_content :js
