--- a/lib/peterhenrikson/views/index.slim
+++ b/lib/peterhenrikson/views/index.slim
@@ -56,6 +56,7 @@ section#services.fullheight.parallax
         h2 JOINERY
         p Constructing small and unique frames using traditional joinery with the subtle effects of hand tools.
 
+a#work
 section.work
   h1 Grindbygg
   .panel
