--- a/lib/peterhenrikson/styles/sections.styl
+++ b/lib/peterhenrikson/styles/sections.styl
@@ -3,8 +3,7 @@ section
   z-index: 1
   padding-top: 120px
   padding-bottom: 50px
-  box-sizing: border-box;
-  background-color: themeColor
+  box-sizing: border-box
   transition: background-color .5s
   &.fullheight
     min-height: 100%
