--- a/lib/peterhenrikson/views/_header.slim
+++ b/lib/peterhenrikson/views/_header.slim
@@ -1,4 +1,4 @@
-nav
+nav style="display:#{(request.path=="/" ? 'none' : 'block')}"
   a href="/"
     object.logosmall type='image/svg+xml' data='/img/logo.svg'
       img src='/img/logosmall.png'
