--- a/lib/peterhenrikson/views/project.slim
+++ b/lib/peterhenrikson/views/project.slim
@@ -2,4 +2,5 @@ section#project
   .container
     h1==project.title
     p==project.body
-    img src==project.featuredPhoto.src
+    - if project.featuredPhoto
+      img src==project.featuredPhoto.src
