--- a/lib/peterhenrikson/styles/nav.styl
+++ b/lib/peterhenrikson/styles/nav.styl
@@ -1,6 +1,6 @@
 nav
   position: fixed
-  top: -65px
+  top: 0
   z-index: 100
   width: 100%
   color: #fff
@@ -8,7 +8,7 @@ nav
   transition: top .25s
   clearfix()
   &.stuck
-    top: 0px
+    top: 0px !important
 
   .brand
     float: left
