--- a/lib/peterhenrikson/styles/style.styl
+++ b/lib/peterhenrikson/styles/style.styl
@@ -28,7 +28,7 @@ html, body
   font-weight: 300
   min-width: 240px
   line-height: 150%
-  background-color: #000
+  background-color: themeColor
 
 a
   color: #fff
